<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta4Fragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPergunta4"
            android:textColor="#000000" />

        <RadioGroup
            android:id="@+id/radioGroupP4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton4a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textP4R1" />

            <RadioButton
                android:id="@+id/radioButton4b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textP4R2" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textProximo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>