<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta3Fragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPergunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textPergunta3"
            android:textColor="#000000" />

        <RadioGroup
            android:id="@+id/radioGroupP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton3a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSim" />

            <RadioButton
                android:id="@+id/radioButton3b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textNao" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonPergunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textProximo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>